grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.newline,
        $.line_number_top_level_item,
        $.frm_version_statement,
        $.frm_begin_block,
        $.frm_begin_property_block,
        $.frm_property_statement,
        $.preprocessor_const,
        $.preprocessor_if,
        $.attribute_statement,
        $.option_statement,
        $.implements_statement,
        $.def_type_statement,
        $.type_declaration,
        $.enum_declaration,
        $.declare_sub_statement,
        $.declare_function_statement,
        $.conditional_sub_declaration,
        $.conditional_function_declaration,
        $.conditional_property_declaration,
        $.sub_declaration,
        $.function_declaration,
        $.property_get_declaration,
        $.property_let_declaration,
        $.property_set_declaration,
        $.event_declaration,
        $.const_declaration,
        $.variable_declaration,
      ),

    newline: (_) => /\r?\n/,

    _statement_separator: ($) => choice($.newline, ":"),

    line_continuation: (_) => token(seq("_", /[ \t]*\r?\n/)),

    sub_declaration: ($) =>
      seq(
        $._sub_header,
        $._statement_separator,
        field("body", optional($.block)),
        field("end", $.end_sub_statement),
      ),

    function_declaration: ($) =>
      seq(
        $._function_header,
        $._statement_separator,
        field("body", optional($.block)),
        field("end", $.end_function_statement),
      ),

    _sub_header: ($) =>
      seq(
        optional($._procedure_modifier),
        caseInsensitive("Sub"),
        field("name", $.identifier),
        optional(field("parameters", $.parameter_list)),
      ),

    _function_header: ($) =>
      seq(
        optional($._procedure_modifier),
        caseInsensitive("Function"),
        field("name", $.identifier),
        optional(field("parameters", $.parameter_list)),
        optional(field("type", $.as_type_clause)),
      ),

    end_sub_statement: ($) => seq(caseInsensitive("End"), caseInsensitive("Sub")),

    end_function_statement: ($) => seq(caseInsensitive("End"), caseInsensitive("Function")),

    byval_modifier: (_) => caseInsensitive("ByVal"),

    block: ($) => repeat1(choice($._statement_separator, $._statement)),

    _statement: ($) =>
      choice(
        $.single_line_if_statement,
        $.if_statement,
        $.select_statement,
        $.for_statement,
        $.for_each_statement,
        $.do_statement,
        $.while_statement,
        $.with_statement,
        $.on_goto_statement,
        $.on_error_statement,
        $.resume_statement,
        $.goto_statement,
        $.label_statement,
        $.line_number_statement,
        $.exit_statement,
        $.end_statement,
        $.redim_statement,
        $.erase_statement,
        $.open_statement,
        $.input_statement,
        $.line_input_statement,
        $.print_statement,
        $.debug_print_statement,
        $.close_statement,
        $.get_statement,
        $.put_statement,
        $.lock_statement,
        $.unlock_statement,
        $.seek_statement,
        $.reset_statement,
        $.raise_event_statement,
        $.name_statement,
        $.stop_statement,
        $.beep_statement,
        $.load_statement,
        $.unload_statement,
        $.preprocessor_const,
        $.preprocessor_if,
        $.def_type_statement,
        $.const_declaration,
        $.variable_declaration,
        $.set_statement,
        $.assignment_statement,
        $.call_statement,
        $.expression_statement,
      ),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        optional(field("optional_modifier", $.optional_modifier)),
        optional(field("passing_mode", choice($.byval_modifier, $.byref_modifier))),
        optional(field("paramarray_modifier", $.paramarray_modifier)),
        field("name", $.identifier),
        optional(field("bounds", $.array_bounds)),
        optional(field("type", $.as_type_clause)),
        optional(field("default_value", $.initializer)),
      ),

    as_type_clause: ($) =>
      prec.right(
        seq(
          caseInsensitive("As"),
          optional(caseInsensitive("New")),
          field("type", $.type_expression),
          optional($.fixed_string_length),
          optional($.array_bounds),
        ),
      ),

    array_bounds: ($) => seq("(", optional(commaSep1($.array_bound)), ")"),

    type_expression: ($) =>
      prec(
        4,
        choice(
          $.dotted_type_expression,
          $.identifier,
          caseInsensitive("String"),
          caseInsensitive("Boolean"),
          caseInsensitive("Byte"),
          caseInsensitive("Integer"),
          caseInsensitive("Long"),
          caseInsensitive("LongLong"),
          caseInsensitive("LongPtr"),
          caseInsensitive("Single"),
          caseInsensitive("Double"),
          caseInsensitive("Currency"),
          caseInsensitive("Date"),
          caseInsensitive("Variant"),
          caseInsensitive("Object"),
        ),
      ),

    dotted_type_expression: ($) =>
      prec(
        5,
        seq(
          $.identifier,
          repeat1(seq(".", choice($.identifier, alias(caseInsensitive("Line"), $.identifier)))),
        ),
      ),

    visibility: (_) =>
      choice(caseInsensitive("Public"), caseInsensitive("Private"), caseInsensitive("Friend")),

    if_statement: ($) =>
      seq(
        optional(field("start_line", $.line_number_prefix)),
        caseInsensitive("If"),
        field("condition", $._condition_expression),
        caseInsensitive("Then"),
        $.newline,
        field("consequence", optional($.block)),
        repeat($.elseif_clause),
        optional($.else_clause),
        optional(field("end_line", $.line_number_prefix)),
        caseInsensitive("End"),
        caseInsensitive("If"),
      ),

    single_line_if_statement: ($) =>
      prec.right(
        seq(
          caseInsensitive("If"),
          field("condition", $._condition_expression),
          caseInsensitive("Then"),
          optional(":"),
          field("consequence", choice($.inline_statement_sequence, $._inline_statement)),
          optional(
            seq(
              caseInsensitive("Else"),
              field("alternative", choice($.inline_statement_sequence, $._inline_statement)),
            ),
          ),
        ),
      ),

    _inline_statement: ($) =>
      choice(
        $.single_line_if_statement,
        $.for_statement,
        $.for_each_statement,
        $.do_statement,
        $.while_statement,
        $.with_statement,
        $.exit_statement,
        $.end_statement,
        $.on_error_statement,
        $.resume_statement,
        $.goto_statement,
        $.redim_statement,
        $.erase_statement,
        $.open_statement,
        $.input_statement,
        $.line_input_statement,
        $.print_statement,
        $.debug_print_statement,
        $.close_statement,
        $.get_statement,
        $.put_statement,
        $.lock_statement,
        $.unlock_statement,
        $.seek_statement,
        $.reset_statement,
        $.raise_event_statement,
        $.name_statement,
        $.stop_statement,
        $.beep_statement,
        $.load_statement,
        $.unload_statement,
        $.const_declaration,
        $.variable_declaration,
        $.set_statement,
        $.assignment_statement,
        $.call_statement,
        $.expression_statement,
      ),

    select_statement: ($) =>
      seq(
        optional(field("start_line", $.line_number_prefix)),
        caseInsensitive("Select"),
        caseInsensitive("Case"),
        field("value", $._expression),
        $.newline,
        repeat(choice($.newline, $.case_clause)),
        optional(field("end_line", $.line_number_prefix)),
        caseInsensitive("End"),
        caseInsensitive("Select"),
      ),

    case_clause: ($) =>
      seq(
        optional(field("line", $.line_number_prefix)),
        caseInsensitive("Case"),
        choice(caseInsensitive("Else"), commaSep1($.case_expression)),
        $._statement_separator,
        field("body", optional($.block)),
      ),

    case_expression: ($) =>
      choice(
        seq(caseInsensitive("Is"), choice("<", "<=", ">", ">=", "=", "<>"), $._expression),
        seq($._expression, caseInsensitive("To"), $._expression),
        $._expression,
      ),

    do_statement: ($) =>
      prec.right(
        choice(
          seq(
            optional(field("start_line", $.line_number_prefix)),
            caseInsensitive("Do"),
            optional($.do_condition),
            $.newline,
            field("body", optional($.block)),
            optional(field("end_line", $.line_number_prefix)),
            caseInsensitive("Loop"),
            optional($.do_condition),
          ),
          seq(
            optional(field("start_line", $.line_number_prefix)),
            caseInsensitive("Do"),
            optional($.do_condition),
            field("body", optional($.single_line_block)),
            optional(field("end_line", $.line_number_prefix)),
            ":",
            caseInsensitive("Loop"),
            optional($.do_condition),
          ),
        ),
      ),

    do_condition: ($) =>
      seq(
        choice(caseInsensitive("While"), caseInsensitive("Until")),
        field("condition", $._condition_expression),
      ),

    while_statement: ($) =>
      seq(
        optional(field("start_line", $.line_number_prefix)),
        caseInsensitive("While"),
        field("condition", $._condition_expression),
        $._statement_separator,
        field("body", optional($.block)),
        optional(field("end_line", $.line_number_prefix)),
        caseInsensitive("Wend"),
      ),

    on_goto_statement: ($) =>
      seq(
        caseInsensitive("On"),
        field("selector", $._expression),
        choice(caseInsensitive("GoTo"), caseInsensitive("GoSub")),
        commaSep1(field("target", choice($.identifier, lineNumber($)))),
      ),

    set_statement: ($) =>
      seq(
        caseInsensitive("Set"),
        field("left", $._assignable_expression),
        "=",
        field("right", choice($.comparison_expression, $._expression)),
      ),

    assignment_statement: ($) =>
      seq(
        field("left", $._assignable_expression),
        "=",
        field("right", choice($.logical_value_expression, $.comparison_expression, $._expression)),
      ),

    call_statement: ($) =>
      prec.right(
        1,
        choice(
          seq(
            caseInsensitive("Call"),
            field("callee", choice($.identifier, $.member_expression)),
            optional(field("arguments", $.argument_list)),
          ),
          seq(
            field("callee", alias($._line_method_expression, $.qualified_member_expression)),
            field("arguments", $.line_range_argument_list),
          ),
          field("callee", $._callable_expression),
          seq(
            field("callee", $._callable_expression),
            field("arguments", choice($.argument_list, $.unparenthesized_argument_list)),
          ),
          field("callee", $.call_expression),
        ),
      ),

    argument_list: ($) => seq("(", optional($._argument_sequence), ")"),

    unparenthesized_argument_list: ($) => $._unparenthesized_argument_sequence,

    _argument_sequence: ($) =>
      choice(
        prec(1, commaSep1($._argument)),
        prec.right(seq(optional($._argument), repeat1(seq(",", optional($._argument))))),
      ),

    _unparenthesized_argument_sequence: ($) =>
      choice(
        prec(2, $._omitted_argument_sequence),
        commaSep1($._argument),
        seq($._argument, repeat1(seq(";", $._argument))),
      ),

    named_argument: ($) =>
      prec(
        1,
        seq(
          field("name", choice($.identifier, alias(caseInsensitive("Name"), $.identifier))),
          ":=",
          field(
            "value",
            choice($.logical_value_expression, $.comparison_expression, $._expression),
          ),
        ),
      ),

    _condition_expression: ($) =>
      choice(
        $.condition_binary_expression,
        $.comparison_expression,
        $.parenthesized_condition_expression,
        $._expression,
      ),

    _expression: ($) =>
      choice(
        $._literal,
        $.file_number_literal,
        $.call_expression,
        $.member_expression,
        alias(caseInsensitive("Line"), $.identifier),
        alias(caseInsensitive("Name"), $.identifier),
        $.identifier,
        $.new_expression,
        $.addressof_expression,
        $.type_of_expression,
        $.parenthesized_expression,
        $.binary_expression,
        $.unary_expression,
      ),

    comparison_expression: ($) =>
      prec.left(
        7,
        seq(
          field("left", $._comparison_operand),
          field("operator", $.comparison_operator),
          field("right", $._expression),
        ),
      ),

    comparison_operator: (_) =>
      choice("=", "<>", "<", "<=", ">", ">=", caseInsensitive("Is"), caseInsensitive("Like")),

    _comparison_operand: ($) =>
      choice(
        $._literal,
        $.file_number_literal,
        $.call_expression,
        $.member_expression,
        alias(caseInsensitive("Line"), $.identifier),
        alias(caseInsensitive("Name"), $.identifier),
        $.identifier,
        $.new_expression,
        $.addressof_expression,
        $.type_of_expression,
        $.parenthesized_expression,
        $._signed_unary_expression,
        $.binary_expression,
      ),

    logical_value_expression: ($) =>
      prec.dynamic(
        1,
        choice(
          prec.left(
            5,
            seq(
              choice($.comparison_expression, $._expression),
              caseInsensitive("And"),
              $.comparison_expression,
            ),
          ),
          prec.left(5, seq($.comparison_expression, caseInsensitive("And"), $._expression)),
          prec.left(
            5,
            seq(
              $.logical_value_expression,
              caseInsensitive("And"),
              choice($.comparison_expression, $._expression),
            ),
          ),
          prec.left(
            4,
            seq(
              choice($.comparison_expression, $._expression),
              caseInsensitive("Or"),
              $.comparison_expression,
            ),
          ),
          prec.left(4, seq($.comparison_expression, caseInsensitive("Or"), $._expression)),
          prec.left(
            4,
            seq(
              $.logical_value_expression,
              caseInsensitive("Or"),
              choice($.comparison_expression, $._expression),
            ),
          ),
        ),
      ),

    condition_binary_expression: ($) =>
      choice(
        prec.left(5, seq($._condition_expression, caseInsensitive("And"), $._condition_expression)),
        prec.left(4, seq($._condition_expression, caseInsensitive("Or"), $._condition_expression)),
      ),

    parenthesized_condition_expression: ($) =>
      prec.dynamic(1, seq("(", $._condition_expression, ")")),

    _assignable_expression: ($) =>
      choice(
        $.identifier,
        alias(caseInsensitive("Name"), $.identifier),
        $.member_expression,
        $.call_expression,
        alias(caseInsensitive("Line"), $.identifier),
      ),

    _callable_expression: ($) =>
      choice($.identifier, alias(caseInsensitive("Name"), $.identifier), $.member_expression),

    _line_method_expression: ($) =>
      prec(
        7,
        seq(
          field("receiver", choice($.identifier, $.call_expression, $.member_expression)),
          field("operator", "."),
          field("member", alias(caseInsensitive("Line"), $.identifier)),
        ),
      ),

    _signed_unary_expression: ($) => prec(13, seq(choice("+", "-"), $._expression)),
