test/corpus/condition_arguments.txt
==================
comparison argument
==================

Sub Test()
    value = GetColumnColor(columnIndex, Month(currentDate) = Month(mDisplayMonth))
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (assignment_statement
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (comparison_expression
              (call_expression
                (identifier)
                (argument_list
                  (identifier)))
              (comparison_operator)
              (call_expression
                (identifier)
                (argument_list
                  (identifier)))))))
      (newline))
    (end_sub_statement))
  (newline))

==================
logical equality comparisons assigned as value
==================

Sub Test()
    matched = ch = "_" Or ch = "-"
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (assignment_statement
        (identifier)
        (logical_value_expression
          (comparison_expression
            (identifier)
            (comparison_operator)
            (string_literal))
          (comparison_expression
            (identifier)
            (comparison_operator)
            (string_literal))))
      (newline))
    (end_sub_statement))
  (newline))

==================
logical comparisons assigned as value
==================

Sub Test()
    matched = code >= 48 And code <= 57 Or ch = "_"
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (assignment_statement
        (identifier)
        (logical_value_expression
          (logical_value_expression
            (comparison_expression
              (identifier)
              (comparison_operator)
              (number_literal))
            (comparison_expression
              (identifier)
              (comparison_operator)
              (number_literal)))
          (comparison_expression
            (identifier)
            (comparison_operator)
            (string_literal))))
      (newline))
    (end_sub_statement))
  (newline))

==================
parenthesized logical comparisons in expressions
==================

Sub Test()
    isHeader = (startRecord = 1 And recordCount = 0)
    If Not (path = vbNullString And csvText = vbNullString) Then
        matched = True
    End If
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (assignment_statement
        (identifier)
        (parenthesized_expression
          (condition_binary_expression
            (comparison_expression
              (identifier)
              (comparison_operator)
              (number_literal))
            (comparison_expression
              (identifier)
              (comparison_operator)
              (number_literal)))))
      (newline)
      (if_statement
        (unary_expression
          (parenthesized_expression
            (condition_binary_expression
              (comparison_expression
                (identifier)
                (comparison_operator)
                (identifier))
              (comparison_expression
                (identifier)
                (comparison_operator)
                (identifier))))))
      (newline)
      (assignment_statement
        (identifier)
        (boolean_literal))
      (newline)
      (end_if_fragment)
      (newline))
    (end_sub_statement))
  (newline))

==================
parenthesized condition binary
==================

Sub Test()
    If web_Temp = "+" And _
        (PlusAsSpace _
         Or EncodingMode = UrlEncodingMode.FormUrlEncoding _
         Or EncodingMode = UrlEncodingMode.QueryUrlEncoding) Then
        matched = True
    End If
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (if_statement
        (condition_binary_expression
          (comparison_expression
            (identifier)
            (comparison_operator)
            (string_literal))
          (line_continuation)
          (parenthesized_condition_expression
            (condition_binary_expression
              (comparison_expression
                (binary_expression
                  (identifier)
                  (line_continuation)
                  (identifier))
                (comparison_operator)
                (qualified_member_expression
                  (identifier)
                  (identifier)))
              (line_continuation)
              (comparison_expression
                (identifier)
                (comparison_operator)
                (qualified_member_expression
                  (identifier)
                  (identifier)))))))
      (newline)
      (assignment_statement
        (identifier)
        (boolean_literal))
      (newline)
      (end_if_fragment)
      (newline))
    (end_sub_statement))
  (newline))

==================
condition binary comparisons
==================

Sub Test()
    If PeekChar() = "e" Or PeekChar() = "E" Then
        value = True
    End If
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (if_statement
        (condition_binary_expression
          (comparison_expression
            (call_expression
              (identifier)
              (argument_list))
            (comparison_operator)
            (string_literal))
          (comparison_expression
            (call_expression
              (identifier)
              (argument_list))
            (comparison_operator)
            (string_literal))))
      (newline)
      (assignment_statement
        (identifier)
        (boolean_literal))
      (newline)
      (end_if_fragment)
      (newline))
    (end_sub_statement))
  (newline))

==================
array return type
==================

Private Function Utf8Bytes(ByVal text As String) As Byte()
End Function

---

(source_file
  (newline)
  (function_declaration
    (visibility)
    (identifier)
    (parameter_list
      (parameter
        (byval_modifier)
        (identifier)
        (as_type_clause
          (type_expression))))
    (as_type_clause
      (type_expression)
      (array_bounds))
    (newline)
    (end_function_statement))
  (newline))

==================
typeof condition
==================

Sub Test()
    If TypeOf Obj Is Collection Then
        matched = True
    End If
    If Not TypeOf CtlDetail Is Access.Line Then
        matched = True
    End If
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (if_statement
        (type_of_expression
          (identifier)
          (type_expression
            (identifier))))
      (newline)
      (assignment_statement
        (identifier)
        (boolean_literal))
      (newline)
      (end_if_fragment)
      (newline)
      (if_statement
        (unary_expression
          (type_of_expression
            (identifier)
            (type_expression
              (dotted_type_expression
                (identifier)
                (identifier))))))
      (newline)
      (assignment_statement
        (identifier)
        (boolean_literal))
      (newline)
      (end_if_fragment)
      (newline))
    (end_sub_statement))
  (newline))
